# L0Snippets

./: CMakeLists.txt  Dockerfile  README.md  complete_flow.cpp  gpu_discover.cpp  host.cpp  host_vc.cpp  kernel_sample.ll  ll_gen.cpp  smem_host.cpp  spv_gen.cpp
common/: CMakeLists.txt  helpers.cpp  helpers.h  l0helpers.cpp  l0helpers.h
jitted/: CMakeLists.txt  mlir_launcher.cpp
kernels/: input.mlir  oclSimpleKernel.cl  smem.ll  vc.ll
scripts/: snippets-conda-env.yml
